--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "seed": "node ./config/seeds.js"
+    "start": "node ./app/bin/www",
+    "seed": "node ./app/config/seeds.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "jsonwebtoken": "^5.7.0",
     "lodash": "^3.10.1",
     "mongoose": "^4.1.1",
     "morgan": "~1.6.1",
